core/testing/snapshots/functions/builtin_func_ref.snap
### TITLE ###
Can reference built-in funcs
### INPUT ###

foo = upper
"test".foo().print()

["Test", "Foo"].map(lower).print()
### STDOUT ###
TEST
[ "test", "foo" ]

### TITLE ###
Can save built-in func ref and then shadow
### INPUT ###

foo = upper
upper = "hi"
print(upper)
print(foo(upper))
### STDOUT ###
hi
HI

### TITLE ###
Errors if invoking undefined symbol
### INPUT ###

notarealsymbol()
### STDERR ###
error[RAD20028]: Undefined identifier 'notarealsymbol'
  --> <script>:2:1
  |
1 |
2 | notarealsymbol()
  | ^^^^^^^^^^^^^^
  |
   = info: rad docs RAD20028


### EXIT ###
1
### TITLE ###
Errors if invoking non-function
### INPUT ###

foo = "hi"
foo(2)
### STDERR ###
error[RAD30001]: Cannot invoke 'foo' as a function: it is a str
  --> <script>:3:1
  |
2 | foo = "hi"
3 | foo(2)
  | ^^^
  |
   = info: rad docs RAD30001


### EXIT ###
1
